[gd_scene load_steps=2 format=3 uid="uid://bqu664g0qo4y8"]

[ext_resource type="Script" uid="uid://dlllosoq1bsis" path="res://Scripts/UI/talk_ui.gd" id="1"]

[node name="TalkUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DialogueContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpeakerName" type="Label" parent="MarginContainer/DialogueContainer"]
layout_mode = 2
text = "Speaker Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/DialogueContainer"]
layout_mode = 2

[node name="DialogueText" type="RichTextLabel" parent="MarginContainer/DialogueContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Dialogue text will appear here with a typing effect."
fit_content = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/DialogueContainer"]
layout_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="MarginContainer/DialogueContainer"]
layout_mode = 2
